Fix minor CSS issue causing the combobox toggler to be too wide when in SOAP mode

--- a/src/apeye.less
+++ b/src/apeye.less
@@ -244,7 +244,7 @@
 	}
 	&.apeye-soap11,
 	&.apeye-soap12 {
-		.apeye-request .apeye-method label span {
+		.apeye-request .apeye-method label > span {
 			width: 6.5em;
 		}
 	}
